@@ -8,6 +8,8 @@ Release 1.1.3 Start 08/02/2023 End --/--/20--
 - 15/02/2023
 04. base/tls.c: self generate rsa/dh parameters if rsa/dh files are missing or
     unreadable
+- 17/02/2023
+05. base/commands.c: return -3 for out of memory error
 
 * Mon Jan 30 2023 12:46:04 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1.2-1.1%{?dist}
 Release 1.1.2 Start 10/10/2022 End 30/01/2023
